# alascca-classify

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  findings.md  logbook.md  pyproject.toml
demo/: group_a_pik3ca_e545k.maf  group_ab_combined.maf  group_b_pik3r1_missense.maf  group_b_pten_frameshift.maf  no_pi3k_alteration.maf  pten_deletion.maf  pten_deletion.seg
src/alascca_classify/: __init__.py  biomarkers.py  classify.py  cli.py  cna.py  io.py  models.py  pik3ca.py  pik3r1.py  pten.py  report.py
src/alascca_classify/data/: consequence_types.json  gene_transcripts.json  pik3ca_hotspots.json  pten_coordinates.json
src/alascca_classify/web/: app.py
src/alascca_classify/web/static/: molpath.css  style.css
src/alascca_classify/web/templates/: base.html  classify.html  error.html  install.html  methods.html  result.html
tests/: conftest.py  test_biomarkers.py  test_classify.py  test_cna.py  test_io.py  test_pik3ca.py  test_pik3r1.py  test_pten.py
